# api-framework-rust

./: .gitignore  README.md
api-module/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  test.mjs
api-module/.github/workflows/: CI.yml
api-module/npm/darwin-arm64/: README.md  package.json
api-module/npm/darwin-x64/: README.md  package.json
api-module/npm/linux-x64-gnu/: README.md  package.json
api-module/npm/win32-x64-msvc/: README.md  package.json
api-module/src/: lib.rs
api-module/src/base/: api_client.rs  mod.rs  service_base.rs
api-module/src/models/: mod.rs
api-module/src/models/request/: booking_model.rs  mod.rs
api-module/src/models/response/: response.rs
api-module/src/services/: booking_service.rs
automation/: Cargo.toml  package.json
automation/.github/workflows/: CI.yml
automation/npm/darwin-arm64/: README.md  package.json
automation/npm/darwin-x64/: README.md  package.json
automation/npm/linux-x64-gnu/: README.md  package.json
automation/npm/win32-x64-msvc/: README.md  package.json
test-module/: .mocharc.json  .pretirrc.json  package.json  tsconfig.json
test-module/src/tests/booking/: DeleteBooking.spec.ts  PatchBooking.spec.ts  UpdateBooking.spec.ts
